--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "backend-assignment-feb",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/app.js",
   "scripts": {
+    "start": "node server.js",
     "test": "npm start"
   },
   "keywords": [],
